fix: improve range input interaction on mobile

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -223,6 +223,14 @@ body {
 
 /* NOTE: */
 
+body.is-mobile .style-manager-plugin input[type='range'] {
+	pointer-events: none;
+}
+
+body.is-mobile .style-manager-plugin input[type='range']::-webkit-slider-thumb {
+	pointer-events: auto;
+}
+
 .style-manager-plugin
 	.setting-item:has(
 		.setting-item-control input[type='text'],
